--- a/src/gui/admin/AdminLogin.form
+++ b/src/gui/admin/AdminLogin.form
@@ -196,6 +196,9 @@
                   </Layout>
                   <SubComponents>
                     <Component class="javax.swing.JTextField" name="name">
+                      <Events>
+                        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="nameKeyPressed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel3">
                       <Properties>
@@ -283,6 +286,9 @@
                       </AuxValues>
                     </Component>
                     <Component class="javax.swing.JPasswordField" name="pass">
+                      <Events>
+                        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="passKeyPressed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JLabel" name="passNotMatchedError">
                       <Properties>
