--- a/src/gui/admin/EditDriver.form
+++ b/src/gui/admin/EditDriver.form
@@ -457,14 +457,11 @@
             <Component class="javax.swing.JComboBox" name="typeComboBox">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="2">
-                    <StringItem index="0" value="National"/>
-                    <StringItem index="1" value="International"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="Object a = driver.getLicenceType();&#xa;typeComboBox.setSelectedItem(a);"/>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="if(driver.getLicenceType().equalsIgnoreCase(&quot;national&quot;)){&#xa;    typeComboBox.setModel(new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;National&quot;, &quot;International&quot; }));&#xa;}&#xa;else{&#xa;    typeComboBox.setModel(new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;International&quot;, &quot;National&quot; }));&#xa;}&#xa;&#xa;Object a = driver.getLicenceType();&#xa;typeComboBox.setSelectedItem(a);"/>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
@@ -478,14 +475,11 @@
             <Component class="javax.swing.JComboBox" name="genderComboBox">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="3">
-                    <StringItem index="0" value="male"/>
-                    <StringItem index="1" value="female"/>
-                    <StringItem index="2" value="not specified"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
               </Properties>
               <AuxValues>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="if(driver.getGender().equalsIgnoreCase(&quot;male&quot;)){&#xa;    genderComboBox.setModel(new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;male&quot;, &quot;female&quot; }));&#xa;}&#xa;else{&#xa;    genderComboBox.setModel(new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;female&quot;, &quot;male&quot; }));&#xa;}&#xa;&#xa;Object b = driver.getGender();&#xa;genderComboBox.setSelectedItem(b);"/>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
