--- a/src/gui/client/EditCustomerProfile.form
+++ b/src/gui/client/EditCustomerProfile.form
@@ -292,12 +292,16 @@
             </Component>
             <Component class="javax.swing.JTextField" name="nameTextField">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Ehtisham Ahmed"/>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="customer.getName()" type="code"/>
+                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="phoneTextField">
               <Properties>
-                <Property name="text" type="java.lang.String" value="0312-1234567"/>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="customer.getPhone()" type="code"/>
+                </Property>
               </Properties>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -314,14 +318,18 @@
                       <Font name="Tahoma" size="13" style="0"/>
                     </Property>
                     <Property name="rows" type="int" value="5"/>
-                    <Property name="text" type="java.lang.String" value="Milad Street, Faisal Town, Lahore"/>
+                    <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="customer.getAddress()" type="code"/>
+                    </Property>
                   </Properties>
                 </Component>
               </SubComponents>
             </Container>
             <Component class="javax.swing.JTextField" name="cnicTextField">
               <Properties>
-                <Property name="text" type="java.lang.String" value="35201-2574895-3"/>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="customer.getCnic()" type="code"/>
+                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="doneButton">
@@ -400,12 +408,16 @@
             </Component>
             <Component class="javax.swing.JTextField" name="usernameTextField">
               <Properties>
-                <Property name="text" type="java.lang.String" value="ehti123"/>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="customer.getUsername()" type="code"/>
+                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JPasswordField" name="jPasswordField">
               <Properties>
-                <Property name="text" type="java.lang.String" value="123455"/>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="customer.getPassword()" type="code"/>
+                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="usernameError">
